Make my features return paged GeoJSON.
