# server/api/design/simple.go
@@ -13,8 +13,11 @@ var _ = Resource("simple", func() {
 	Action("my features", func() {
 		Routing(GET("my/simple/features"))
 		Response(NotFound)
+		Params(func() {
+			Param("page", Integer)
+		})
 		Response(OK, func() {
-			Media(GeoJSON)
+			Media(PagedGeoJSON)
 		})
 	})
 
